# syntax-symphony

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_to_pypi.yml
examples/: example_api.py  expr_grammar.json
src/syntax_symphony/: cli.py  derivation_tree.py  fuzzer.py  grammar.py
tests/: test_derivation_tree.py  test_fuzzer.py  test_grammar.py
