[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syntax_symphony"
version = "0.0.2"
description = "Efficient grammar-based fuzzer."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Stanimir Iglev" },
    { name = "Stanimir Iglev", email = "iglev.stanimir@gmail.com" },
]
maintainers = [{ name = "Stanimir Iglev", email = "iglev.stanimir@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["fuzzer", "fuzzing", "testing", "grammar", "grammars"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]
dependencies = ["schema >= 0.7.7"]


[project.urls]
Homepage = "https://github.com/StanimirIglev/syntax-symphony"
Documentation = "https://github.com/StanimirIglev/syntax-symphony/blob/master/README.md"
Repository = "https://github.com/StanimirIglev/syntax-symphony"
Changelog = "https://github.com/StanimirIglev/syntax-symphony/blob/master/CHANGELOG.md"

[project.scripts]
ssfuzz = "syntax_symphony.cli:ssfuzz"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
