[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syntax_symphony"
version = "0.1.0"
description = "Efficient grammar-based fuzzer."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Stanimir Iglev" },
    { name = "Stanimir Iglev", email = "iglev.stanimir@gmail.com" },
]
maintainers = [{ name = "Stanimir Iglev", email = "iglev.stanimir@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["fuzzer", "fuzzing", "testing", "grammar", "grammars"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]
dependencies = ["schema >= 0.7.7"]


[project.urls]
Homepage = "https://github.com/StanimirIglev/syntax-symphony"
Documentation = "https://github.com/StanimirIglev/syntax-symphony/blob/master/README.md"
Repository = "https://github.com/StanimirIglev/syntax-symphony"
Changelog = "https://github.com/StanimirIglev/syntax-symphony/blob/master/CHANGELOG.md"

[project.scripts]
ssfuzz = "syntax_symphony.cli:ssfuzz"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
